# fractaldna

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  Pipfile  README.md  README.poetry.md  SECURITY.md  api.html  cookiecutter-config-file.yml  dna_models.html  examples.html  fractal_example.py  genindex.html  getting_started_dna.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  structure_models.html
.archive/: fractal_example.py  setup.cfg
.archive/doc/: usage.rst
.archive/hilbert3d/: blenderdnavoxels.py  dna.txt  dna2.txt  dnavoxels.py  hilbert.py  tests.py
.archive/simpledna/: dnachain.py  tests.py
.archive/vis/: README.md  dnablender.py  example.py  twobp.py  twobp.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  docs-pull-request.yml  docs.yml  docs2.yml
_autosummary/: fractaldna.dna_models.basepair.BasePair.html  fractaldna.dna_models.basepair.html  fractaldna.dna_models.dnachain.DNAChain.html  fractaldna.dna_models.dnachain.DoubleDNAChain.html  fractaldna.dna_models.dnachain.EightStrandDNAChain.html  fractaldna.dna_models.dnachain.FourStrandDNAChain.html  fractaldna.dna_models.dnachain.FourStrandTurnedDNAChain.html  fractaldna.dna_models.dnachain.Histone.html  fractaldna.dna_models.dnachain.MultiSolenoidVolume.html  fractaldna.dna_models.dnachain.PlottableSequence.html  fractaldna.dna_models.dnachain.Solenoid.html  fractaldna.dna_models.dnachain.SplineLinker.html  fractaldna.dna_models.dnachain.TurnedDNAChain.html  fractaldna.dna_models.dnachain.TurnedDoubleDNAChain.html  fractaldna.dna_models.dnachain.TurnedSolenoid.html  fractaldna.dna_models.dnachain.TurnedTwistedDNAChain.html  fractaldna.dna_models.dnachain.TurnedTwistedDoubleDNAChain.html  fractaldna.dna_models.dnachain.html  fractaldna.dna_models.dnapositions.DoubleStrand.html  fractaldna.dna_models.dnapositions.DoubleStrandMolecules.html  fractaldna.dna_models.dnapositions.MoleculeDictionary.html  fractaldna.dna_models.dnapositions.MoleculeFromAtoms.html  fractaldna.dna_models.dnapositions.atanpi.html  fractaldna.dna_models.dnapositions.base_name.html  fractaldna.dna_models.dnapositions.get_p_values.html  fractaldna.dna_models.dnapositions.html  fractaldna.dna_models.dnapositions.mc_triple_volume.html  fractaldna.dna_models.dnapositions.opposite_pair.html  fractaldna.dna_models.dnapositions.overlap_volume.html  fractaldna.dna_models.dnapositions.triple_overlap_volume.html  fractaldna.dna_models.html  fractaldna.dna_models.molecules.Adenine.html  fractaldna.dna_models.molecules.Cytosine.html  fractaldna.dna_models.molecules.DNASugar.html  fractaldna.dna_models.molecules.Guanine.html  fractaldna.dna_models.molecules.Molecule.html  fractaldna.dna_models.molecules.Thymine.html  fractaldna.dna_models.molecules.Triphosphate.html  fractaldna.dna_models.molecules.html  fractaldna.exceptions.FractalDNAException.html  (+45 more)
_sources/: examples.rst.txt  index.rst.txt
_sources/_autosummary/: fractaldna.dna_models.basepair.BasePair.rst.txt  fractaldna.dna_models.basepair.rst.txt  fractaldna.dna_models.dnachain.DNAChain.rst.txt  fractaldna.dna_models.dnachain.DoubleDNAChain.rst.txt  fractaldna.dna_models.dnachain.EightStrandDNAChain.rst.txt  fractaldna.dna_models.dnachain.FourStrandDNAChain.rst.txt  fractaldna.dna_models.dnachain.FourStrandTurnedDNAChain.rst.txt  fractaldna.dna_models.dnachain.Histone.rst.txt  fractaldna.dna_models.dnachain.MultiSolenoidVolume.rst.txt  fractaldna.dna_models.dnachain.PlottableSequence.rst.txt  fractaldna.dna_models.dnachain.Solenoid.rst.txt  fractaldna.dna_models.dnachain.SplineLinker.rst.txt  fractaldna.dna_models.dnachain.TurnedDNAChain.rst.txt  fractaldna.dna_models.dnachain.TurnedDoubleDNAChain.rst.txt  fractaldna.dna_models.dnachain.TurnedSolenoid.rst.txt  fractaldna.dna_models.dnachain.TurnedTwistedDNAChain.rst.txt  fractaldna.dna_models.dnachain.TurnedTwistedDoubleDNAChain.rst.txt  fractaldna.dna_models.dnachain.rst.txt  fractaldna.dna_models.dnapositions.DoubleStrand.rst.txt  fractaldna.dna_models.dnapositions.DoubleStrandMolecules.rst.txt  fractaldna.dna_models.dnapositions.MoleculeDictionary.rst.txt  fractaldna.dna_models.dnapositions.MoleculeFromAtoms.rst.txt  fractaldna.dna_models.dnapositions.atanpi.rst.txt  fractaldna.dna_models.dnapositions.base_name.rst.txt  fractaldna.dna_models.dnapositions.get_p_values.rst.txt  fractaldna.dna_models.dnapositions.mc_triple_volume.rst.txt  fractaldna.dna_models.dnapositions.opposite_pair.rst.txt  fractaldna.dna_models.dnapositions.overlap_volume.rst.txt  fractaldna.dna_models.dnapositions.rst.txt  fractaldna.dna_models.dnapositions.triple_overlap_volume.rst.txt  fractaldna.dna_models.molecules.Adenine.rst.txt  fractaldna.dna_models.molecules.Cytosine.rst.txt  fractaldna.dna_models.molecules.DNASugar.rst.txt  fractaldna.dna_models.molecules.Guanine.rst.txt  fractaldna.dna_models.molecules.Molecule.rst.txt  fractaldna.dna_models.molecules.Thymine.rst.txt  fractaldna.dna_models.molecules.Triphosphate.rst.txt  fractaldna.dna_models.molecules.rst.txt  fractaldna.dna_models.rst.txt  (+46 more)
docker/: README.md
examples/: blenderfractal.py  fractal-structure-models.html  generating-geometries-for-geant.html  generating-structures-for-geant.html  how_to_dna_shapes.py  how_to_structures.py  modifying-solenoids.html  multiple-solenoids.html  multiple-solenoids.ipynb  multiple-strands.html  multiple-strands.ipynb  other-structure-models.html  single-solenoids.html  single-solenoids.ipynb  single-strand.html  single-strand.ipynb  structure-models.html  structure-models.ipynb
fractaldna/: __init__.py  __main__.py  exceptions.py
hilbert3d/: 16k_hilbert.txt  README.md  blenderdnavoxels.py  blenderfractal.py  dnavoxels.py  hilbert.py  hilbert1.txt  tests.py
simpledna/: README.md  basepair.py  dnachain.py  dnapositions.py  molecules.py  rotations.py  tests.py
vis/: README.md  dnablender.py  example.py  twobp.py
(+69 files in other folders)
